[package]
name = "lexifier"
version = "0.1.0"
authors = ["Yuhanun Citgez <y.citgez@student.utwente.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4.0"
lazy_static = "1.4.0"
tokenizer = { path="../tokenizer" }
